# haskell

./: .gitignore  cabal.project
bayes/: bayes.cabal
bayes/src/: Bayes.hs
broken/dense/: dense.cabal
broken/dense/ad/: Scalar.hsig
broken/dense/core/Data/Type/: Tuple.hs
broken/dense/core/Vector/: Class.hs
broken/dense/matrices/: Square.hs
broken/dense/scalars/: Known.hs  Unknown.hs
broken/dense/vectors/: Scalar.hsig
dense/: README.md  dense.cabal
dense/ad/: Dual.hs
dense/scalars/: Float.hs
dense/vectors/: V2.hs
ergo/: LICENSE.md  Makefile  ergo.cabal  main.hs  tags
ergo/src/: Driver.hs  Names.hs  TODO.md  Unique.hs  Use.hs
ergo/src/Common/: Ix.hs  Names.hs  Nat.hs  Skew.hs  SparseSet.hs
ergo/src/Common/Internal/: Ix.hs  Nat.hs  Skew.hs  SparseSet.hs
ergo/src/Control/Monad/: Sharing.hs
ergo/src/Elaborate/: Check.hs  Error.hs  Evaluation.hs  Monad.hs  Occurrence.hs  Term.hs  Unification.hs  Value.hs  Zonk.hs
ergo/src/Ergo/: Icit.hs  Names.hs  Unique.hs  Use.hs
ergo/src/Ergo/Elaborate/: Check.hs  Error.hs  Evaluation.hs  Monad.hs  Occurrence.hs  Term.hs  Unification.hs  Value.hs  Zonk.hs
ergo/src/Ergo/Source/: Parser.hs  Term.hs
ergo/src/Source/: Parser.hs  Term.hs
free-sequences/: README.md  free-sequences.cabal
free-sequences/src/Aligned/: Free.hs  Freer.hs
hask/: LICENSE.md  README.md  hask.cabal
hask/src/Data/Category/: Class.hs  Functor.hs
lf/: Makefile  README.md  lf.cabal
lf/src/: Icit.hs  Names.hs  Unique.hs  Use.hs
lf/src/Elaborate/: Check.hs  Error.hs  Evaluation.hs  Monad.hs  Occurrence.hs  Term.hs  Unification.hs  Value.hs  Zonk.hs
make/: README.md  make.cabal
make/src/: Make.hs
par/: .hlint.yaml  LICENSE.md  Makefile  README.md  par.cabal
par/cbits/: holes.cmm
par/src/: Par.hs
par/src/Par/: Backoff.hs  Counted.hs  Deque.hs  Exception.hs  Fiber.hs  Hole.hs  IVar.hs  Monad.hs  Observer.hs  Subscription.hs  Util.hs
refs/: README.md  refs.cabal
refs/src/: Vec.hs
sequences/: README.md  sequences.cabal
sequences/common/Unaligned/: Base.hs
sequences/group-relative/: Delta.hsig  Relative.hs
sequences/group-relative/Relative/: Unaligned.hs
sequences/monoid-relative/: Delta.hsig  Relative.hs
sequences/monoid-relative/Relative/: .Unaligned.hs.swp  Unaligned.hs
typed-keys/: typed-keys.cabal
typed-keys/src/Data/Type/Coercion/: Key.hs
typed-keys/src/Data/Type/Equality/: Key.hs
types/: Makefile  README.md  Setup.lhs  TODO.md  types.cabal
types/example/: Vec.hs
types/src/Data/: Type.hs
types/src/Data/Eq/: Strict.hs  Structural.hs
types/src/Data/Type/: Constraint.hs  Fiber.hs  Internal.hs  Meta.hs  Some.hs  TH.hs  Unsafe.hs
types/src/Data/Type/Internal/: Instances.hs  TH.hs
ulf/: Makefile  README.md  ulf.cabal
ulf/src/Common/: Icit.hs  Nat.hs  Skew.hs  Unique.hs  Use.hs
ulf/src/Common/Internal/: Ix.hs  Nat.hs  Skew-independent.hs  Skew-unindexed.hs  Skew.hs
ulf/src/Elaborate/: Evaluation.hs  Term.hs  Unification.hs
ulf/wip/: LF.hs
watch/src/Data/Watch/: Internal.hs
wip/: Nat.hs
