cabal-version: 3.4
name: bayes
version: 0
synopsis: A monad called Bayes
description: A monad called Bayes
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: bayes

library
  default-language: Haskell2010
  build-depends:
    ad,
    base >= 4.14 && < 5,
    data-default,
    log-domain,
    random,
    statistics

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  import: base
  hs-source-dirs: src
  build-depends: sequences
  exposed-modules:
    Bayes
