cabal-version: 3.4
name: ergo
version: 0
synopsis: ergo
description: a toy logical framework
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett and András Kovács,
           Copyright (c) 2012-2013 Edward Kmett and Dan Doel
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: ergo

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.14 && < 5,
    comonad >= 5.0.6 && < 5.1,
    exceptions >= 0.10.4 && < 0.11,
    ghc-prim >= 0.6.1 && < 0.7,
    hashable >= 1.3.0 && < 1.4,
    haskell-lsp,
    lens >= 4.19.2 && < 4.20,
    megaparsec >= 8.0.0 && < 8.1,
    mtl >= 2.2.2 && < 2.3,
    prettyprinter >= 1.7.0 && < 1.8,
    primitive >= 0.7.1 && < 0.8,
    rock,
    text-short >= 0.1.3 && < 0.2,
    transformers >= 0.5.6 && < 0.6,
    unordered-containers >= 0.2.12 && < 0.3
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-simplifiable-class-constraints

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.Sharing
    Elaborate.Check
    Elaborate.Error
    Elaborate.Evaluation
    Elaborate.Occurrence
    Elaborate.Term
    Elaborate.Unification
    Elaborate.Value
    Elaborate.Zonk
    Icit
    Names
    Source.Parser
    Source.Term
    Unique
    Use
