cabal-version: 3.4
name: free-sequences
version: 0
synopsis: free monads without remorse
description: free monads without remorse
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: free-sequences

library
  default-language: Haskell2010
  build-depends: base >= 4.14 && < 5, data-default
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  import: base
  hs-source-dirs: src
  build-depends: sequences
  exposed-modules:
    Aligned.Free
    Aligned.Freer 
