cabal-version: 3.4
name: hask
version: 0
synopsis: categories
description: categories
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: hask

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.14 && < 5,
    constraints,
    ghc-prim,
    these
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-redundant-constraints -Widentities -Wmissing-export-lists

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Data.Category.Class
    Data.Category.Functor
    Data.Category.Monoidal
