cabal-version: 3.4
name: lf
version: 0
synopsis: lf
description: a toy logical framework
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett and András Kovács,
           Copyright (c) 2012-2013 Edward Kmett and Dan Doel
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: lf

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.14 && < 5,
    comonad,
    exceptions,
    ghc-prim,
    hashable,
    typed-keys,
    lens,
    megaparsec,
    mtl,
    name,
    prettyprinter,
    primitive,
    transformers,
    unordered-containers
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-simplifiable-class-constraints
    -fno-max-relevant-binds

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Control.Monad.Sharing
    Elaborate.Check
    Elaborate.Error
    Elaborate.Evaluation
    Elaborate.Monad
    Elaborate.Occurrence
    Elaborate.Term
    Elaborate.Unification
    Elaborate.Value
    Icit
    Names
    Source.Parser
    Source.Term
    Unique
    Use
