cabal-version: 3.4
name: ulf
version: 0
synopsis: ulf
description: the ULF logical framework
homepage: https://github.com/ekmett/haskell
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2020 Edward Kmett and András Kovács,
           Copyright (c) 2012-2013 Edward Kmett and Dan Doel
stability: experimental
category: Data Structures
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/haskell
  subdir: ulf

flag fcif
  description: implicit fun
  default: True
  manual: True

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.14 && < 5,
    bound,
    comonad >= 5.0.6 && < 5.1,
    dependent-hashmap,
    exceptions >= 0.10.4 && < 0.11,
    ghc-prim >= 0.6.1 && < 0.7,
    hashable >= 1.3.0 && < 1.4,
    haskell-lsp,
    lens >= 4.19.2 && < 4.20,
    make,
    megaparsec >= 8.0.0 && < 8.1,
    mtl >= 2.2.2 && < 2.3,
    prettyprinter >= 1.7.0 && < 1.8,
    primitive >= 0.7.1 && < 0.8,
    some,
    text-short >= 0.1.3 && < 0.2,
    transformers >= 0.5.6 && < 0.6,
    unordered-containers >= 0.2.12 && < 0.3,
    watch,
    watch-directory
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wno-simplifiable-class-constraints

library
  import: base
  hs-source-dirs: src
  if flag(fcif)
    cpp-options: -DFCIF
  exposed-modules:
    Common.Icit
    Common.Ix
    Common.Names
    Common.Nat
    Common.Unique
    Common.Use
    Common.Internal.Ix
    Common.Internal.Nat
    Control.Monad.Sharing
    Driver
    Elaborate.Check
    Elaborate.Error
    Elaborate.Evaluation
    Elaborate.Occurrence
    Elaborate.Term
    Elaborate.Unification
    Elaborate.Value
    Elaborate.Zonk
    Source.Parser
    Source.Term

  --  Common.Skew
  --  Common.Internal.Skew

executable ulf
  import: base
  main-is: main.hs
  build-depends:
    base,
    ulf,
    optparse-applicative,
    text

